Adding CRUD for Subject and Page

--- a/app/views/pages/list.html.erb
+++ b/app/views/pages/list.html.erb
@@ -1,9 +1,9 @@
-<% @page_title = "Subjects List" %>
+<% @page_title = "Pages List" %>
 
-<div class="subject list">
-	<h2>Subjects</h2>
+<div class="page list">
+	<h2>Pages</h2>
 	
-	<%= link_to("Add New Subject", {:action => 'new'}, :class => 'action new') %>
+	<%= link_to("Add New Page", {:action => 'new'}, :class => 'action new') %>
 	
 	<table>
 		<tr class="header">
@@ -26,4 +26,4 @@
 		</tr>
 		<% end %>	
 	</table>
-</div>	
+</div>
