--- a/app/views/pages/list.html.erb
+++ b/app/views/pages/list.html.erb
@@ -1,29 +1,28 @@
-<% @page_title = "Pages List" %>
-
 <div class="page list">
-	<h2>Pages</h2>
-	
-	<%= link_to("Add New Page", {:action => 'new'}, :class => 'action new') %>
-	
-	<table>
-		<tr class="header">
-			<th>&nbsp;</th>
-			<th>Subject</th>
-			<th>Visible</th>
-			<th>Pages</th>
-			<th>Actions</th>
-		</tr>	
-		<% @subjects.each do |subject| %>
-		<tr>
-			<td><%= subject.position %></td>
-			<td><%= subject.name %></td>
-			<td class="centre"><%= subject.visible ? 'Yes' : 'No' %></td>
-			<td class="centre"><%= subject.pages.size %></td>
-			<td class="actions"><%= link_to("Show", {:action => 'show', :id => subject.id}, :class => 'action show') %>
-													<%= link_to("Edit", {:action => 'edit', :id => subject.id}, :class => 'action edit') %>
-													<%= link_to("Delete", {:action => 'delete', :id => subject.id}, :class => 'action delete')%>
-			</td>
-		</tr>
-		<% end %>	
-	</table>
+  <h2>Pages</h2>
+  
+  <%= link_to("Add New Page", {:action => 'new'}, :class => 'action new') %>
+
+  <table class="listing" summary="Page list">
+    <tr class="header">
+      <th>&nbsp;</th>
+      <th>Page</th>
+      <th>Visible</th>
+      <th>Sections</th>
+      <th>Actions</th>
+    </tr>
+    <% @pages.each do |page| %>
+    <tr>
+      <td><%= page.position %></td>
+      <td><%= page.name %></td>
+      <td class="center"><%= page.visible ? 'Yes' : 'No' %></td>
+      <td class="center"><%= page.sections.size %></td>
+      <td class="actions">
+        <%= link_to("Show", {:action => 'show', :id => page.id}, :class => 'action show') %>
+        <%= link_to("Edit", {:action => 'edit', :id => page.id}, :class => 'action edit') %>
+        <%= link_to("Delete", {:action => 'delete', :id => page.id}, :class => 'action delete') %>
+      </td>
+    </tr>
+    <% end %>
+  </table>
 </div>
