--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -44,6 +44,11 @@ a.action:hover { background: #B6D491; }
 .section + .section { padding-top: 0.5em; margin-top: 0.5em; 
   border-top: 1px dotted #666666; }
 
+span.status { display: block; width: 10px; height: 10px; 
+  margin: 0.25em auto; padding: 0; border: 1px solid #000000; }
+span.status.true  { background: green; color: green; }
+span.status.false { background: red; color: red; }
+
 /* Errors */
 .fieldWithErrors { display: table; padding: 2px; background-color: #AA0000; }
 #errorExplanation { width: 400px; padding: 0; margin: 0 auto 1.5em; 
@@ -54,3 +59,4 @@ a.action:hover { background: #B6D491; }
 #errorExplanation p { color: #333333; margin: 0; padding: 3px 0.5em; }
 #errorExplanation ul { margin-top: 0; }
 #errorExplanation ul li { list-style: square; }
+
